# codex-responses-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
configs/: model-keys.env.example  services.example.yaml
docs/: architecture.en.md  architecture.zh-CN.md  model-mapping.zh-CN.md  validation.en.md  validation.zh-CN.md
scripts/: bootstrap.sh  start-all.sh  start-config.sh  start-deepseek-local.sh  start-deepseek.sh  start-glm-local.sh  start-mimo.sh  start-qwen.sh  start-zhipu.sh  start.sh  status-all.sh  stop-all.sh
src/codex_responses_bridge/: __init__.py  __main__.py  app.py  config.py  i18n.py  logging_utils.py  model_aliases.py  models.py  provider_adapters.py  provider_profiles.py  request_capture.py
src/codex_responses_bridge/translators/: __init__.py  responses_openai.py
src/codex_responses_bridge/upstreams/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_config.py  test_model_aliases.py  test_model_resolution.py  test_provider_adapters.py  test_provider_profiles.py  test_translator.py  test_unknown_model_strategy.py  test_upstream_openai.py
